--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Scroll down to axplore more</p>
         </div>
         <div class="first-width">
-            <img src="focus.png" alt="">
+            <img src="images/focus.png" alt="">
         </div>
     </section>
 
@@ -35,19 +35,19 @@
         <div class="container">
 
             <div id="mission" class="middle-box">
-                <img src="illustrator-1.png" alt="">
+                <img src="images/illustrator-1.png" alt="">
                 <h3>Mission</h3>
                 <p>We have a very important mission to announce to all the guys to take a trategic step. </p>
             </div>
             
             <div id="vision" class="middle-box">
-                <img src="illustrator-2.png" alt="">
+                <img src="images/illustrator-2.png" alt="">
                 <h3>Vision</h3>
                 <p>We have long term vision which is based on our mission, every stepp of mission success we gain vision.</p>
             </div>
             
             <div id="goal" class="middle-box">
-                <img src="illustrator-3.png" alt="">
+                <img src="images/illustrator-3.png" alt="">
                 <h3>Goals</h3>
                 <p>Goals are very important for every company, as much as mission accomplishment, much more vission accomplishment. </p>
             </div>
@@ -59,7 +59,7 @@
     <section class="background container">
       <div  class="container">
         <div class="first-width"> 
-            <img src="coding.png" alt="">
+            <img src="images/coding.png" alt="">
         </div>
         <div class="first-width">
             <h2>Web Development</h2>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="first-width"> 
-                <img src="project.png" alt="">
+                <img src="images/project.png" alt="">
             </div>
 
         </section> 
@@ -91,7 +91,7 @@
     <section class="about">
 
         <div>
-        <img src="coding.jpg" alt="">
+        <img src="images/coding.jpg" alt="">
         </div>
 
         <div>
